# apps/docs/openapi-v2-resources.json
@@ -4852,6 +4852,18 @@
             "minLength": 1,
             "maxLength": 1024
           },
+          "accessToken": {
+            "description": "Write-only provider access token.",
+            "writeOnly": true,
+            "type": "string",
+            "minLength": 1,
+            "maxLength": 8192
+          },
+          "environment": {
+            "description": "Provider environment.",
+            "type": "string",
+            "enum": ["production", "sandbox"]
+          },
           "certificateId": {
             "description": "Provider certificate mapping identifier.",
             "type": "string",
